# RIVIC

./: Cargo.toml  README.md  study.md
ContactAgend-main/: Cargo.toml  Infos-pt-br.md  README.md
ContactAgend-main/src/: add.rs  exc.rs  list.rs  main.rs
anotes/: array.ls  array.rs  loop.rs  struct.rs
projects/: adv.rs  calc.rs  convert.rs  meter.rs  morseman.rs  sen.rs
rust_DB-main/: Cargo.toml  README.md  pt.md
rust_DB-main/src/: main.rs
src/: main.rs
