[package]
name = "runvs"
version = "0.1.0"
authors = ["davi"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#arquivos
[[bin]]
 name = "morseman"
 path = "projects/morseman.rs"
[[bin]]
name = "calc"
path = "projects/calc.rs"
[[bin]]
name = "adv"
path = "projects/adv.rs"
rand = "0.8.5"
[[bin]]
name = "conv"
path = "projects/convert.rs"
[[bin]]
name = "array"
path = "anotes/array.rs"
[[bin]]
name = "loop"
path = "anotes/loop.rs"
[[bin]]
name = "struct"
path = "anotes/struct.rs"
